--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/china"
+        android:icon="@drawable/flag_china"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -19,7 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".CountryActivity" />
-        <activity android:name=".QuizActivity"></activity>
+        <activity android:name=".Quiz1Activity" />
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".Quiz2Activity"></activity>
     </application>
 
 </manifest>
